Bug 373590 - Amarok KF5 - Play/Pause global hotkey does not exist.
Summary: Amarok KF5 - Play/Pause global hotkey does not exist.
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: kf5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 2.9
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-12 22:32 UTC by Darin McBride
Modified: 2019-10-04 12:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Image of problem (23.89 KB, image/png)
2016-12-13 01:36 UTC, Darin McBride
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Darin McBride 2016-12-12 22:32:50 UTC
After upgrading kde frameworks to 5.28.0 from 5.27.0 (and plasma from 5.8.3 to 5.8.4), and using the kf5 branch of amarok, I'm finding that I can no longer use a global hotkey for Play/Pause at all.

I'm not sure if this is a problem in amarok or in khotkeys or whatever, so I'm making a guess by starting with amarok.

As a workaround, I've created a custom hotkey which will run `amarok -t` - but that seems like a weird workaround for something that used to work so nicely.
Comment 1 Myriam Schweingruber 2016-12-13 00:22:37 UTC
You do realise that the kf5 branch is pre-alpha and unreleased material yet, I hope. Since there haven't been any changes in a while in this part of our code, I guess the change in the kf5 version triggered the behavior.
Comment 2 Darin McBride 2016-12-13 01:36:03 UTC
Sure, but if you don't get users' feedback on it, how will you know when it's ready? :)

As to whether it's amarok or kf5, I wouldn't know how to prove it is one or the other, and figured amarok has the smaller profile, and thus easier to prove?  If there was some debug code or something I could run to show that KF5 wasn't doing what Amarok asked by omitting these global entries, then I could take that over to the khotkeys team, perhaps?

I'll attach a screen shot of the problem here, though I don't imagine this will be everything required to prove where the problem lays.
Comment 3 Darin McBride 2016-12-13 01:36:08 UTC
Created attachment 102756 [details]
Image of problem
Comment 4 kde 2018-09-12 05:54:57 UTC
Is it still the case? I'm not able to make a global shortcut for Play/Pause (the global column for that button doesn't exist in the configuration window).

It works great for the other functions. Just Play/Pause isn't supported.
Comment 5 Darin McBride 2018-09-18 02:44:58 UTC
I've reinstalled from scratch(ish) due to a hard drive failure. Amarok has given me a few hiccups here, but I don't have this hotkey created and the play/pause key on my keyboard works just fine.  So, assuming no one else is encountering such a problem, it appears this can be closed.

For the record, I'm now running Qt 5.11.1 and KF5 5.49 and Plasma 5.13.5.  It may have been fixed at any point up to now, and I just may not have noticed since the amarok -t method was working.
Comment 6 kde 2018-09-19 05:33:37 UTC
I don't have play/pause buttons, and the play/pause hotkey is still missing for me.

In the system settings, I could see it in the global shortcuts section, and change it, but it had no effect.
Now, I removed the [amarok] section from ~/.config/kglobalshortcutsrc, and it disappeared from the system settings as well (the other global key are there, and work as intended).
Comment 7 Wolfgang Bauer 2019-10-04 12:35:46 UTC
Git commit 5ed62f9a089d239c3182514b6b67450866be3ed5 by Wolfgang Bauer.
Committed on 04/10/2019 at 12:35.
Pushed by wbauer into branch 'master'.

Register Play/Pause as global shortcut again

Commit 0b2b243b removed the call to KGlobalAccel::setGlobalShortcut()
because it registered Space as global shortcut, which of course is a bad
idea.
But that made it impossible to set up a global shortcut at all (and made
an existing one have no effect).

To fix this, add it back and register an empty key, like the KDE4 code
does.
Differential Revision: https://phabricator.kde.org/D24381

M  +1    -0    src/ActionClasses.cpp

https://commits.kde.org/amarok/5ed62f9a089d239c3182514b6b67450866be3ed5
Comment 8 Wolfgang Bauer 2019-10-04 12:45:39 UTC
(In reply to Darin McBride from comment #5)
> I've reinstalled from scratch(ish) due to a hard drive failure. Amarok has
> given me a few hiccups here, but I don't have this hotkey created and the
> play/pause key on my keyboard works just fine.  So, assuming no one else is
> encountering such a problem, it appears this can be closed.
The Play/Pause hotkey is handled by Plasma's media player applet by default since Plasma 5.3 ("Media Control" in systemsettings).

Amarok's corresponding global shortcut was removed by mistake, but it's back now.